// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SizeStandardsTool EmployeesScreen should match snapshot 1`] = `
<div
  className="screen"
>
  <h2>
    How many employees?
  </h2>
  <div
    className="employeesInput"
  >
    <label
      htmlFor="employees"
    >
      Number of employees
    </label>
    <input
      id="employees"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      type="text"
      value=""
    />
  </div>
  <p>
    This should be the average number of full-time or part-time 
    <br />
    employees over the last 12 months.
  </p>
  <button
    autoFocus={false}
    className="LargePrimaryButton  button"
    disabled={true}
    formTarget="_self"
    id={undefined}
    onKeyPress={[Function]}
    onTouchTap={[Function]}
    tabIndex="0"
  >
    SEE RESULTS
  </button>
</div>
`;

exports[`SizeStandardsTool NaicsScreen should match snapshot 1`] = `
<div
  className="screen"
>
  <h2>
    What's your industry?
  </h2>
  <div>
    <ul
      className="naicsCodesList"
    >
      <li>
        <div
          className="naicsSection"
        >
          <div
            className="left"
          >
            <p>
              <span>
                 
              </span>
            </p>
            <p>
              Dry Pea and Bean Farming
            </p>
          </div>
          <div
            className="right"
          >
            <a
              className="remove"
              onClick={[Function]}
              onKeyPress={[Function]}
              tabIndex="0"
            >
              <i
                aria-hidden="true"
                className="fa fa-times"
              />
            </a>
          </div>
        </div>
      </li>
    </ul>
  </div>
  <div>
    <div
      className="naicsCodeInput"
    >
      <div
        className="loading"
      >
        <p>
          ...loading suggestions...
        </p>
      </div>
    </div>
  </div>
  <div>
    <button
      autoFocus={false}
      className="LargePrimaryButton  button"
      disabled={undefined}
      formTarget="_self"
      id={undefined}
      onKeyPress={[Function]}
      onTouchTap={[Function]}
      tabIndex="0"
    >
      Next
    </button>
  </div>
</div>
`;

exports[`SizeStandardsTool ResultsScreen should match snapshot 1`] = `
<div
  className="screen"
>
  <h2>
    Are you a small business?
  </h2>
  <div>
    <div
      className="loading"
    >
      <p>
        ...now analyzing your business...
      </p>
    </div>
  </div>
  <div
    className="cards"
  >
    <div
      className="card"
    >
      <p>
        Learn more about 
        <a
          href="/contracting/getting-started-contractor/make-sure-you-meet-sba-size-standards"
          target="_blank"
        >
          SBA small business size standards
        </a>
        .
      </p>
      <p>
        <strong>
          SBA Office of Size Standards
        </strong>
      </p>
      <ul>
        <li>
          <i
            aria-hidden="true"
            className="fa fa-map-marker"
          />
          <p>
            409 3rd Street
            <span
              className="comma"
            >
              ,
            </span>
             SW 
            <br />
            Washington
            <span
              className="comma"
            >
              ,
            </span>
             DC 2041
          </p>
        </li>
        <li>
          <i
            aria-hidden="true"
            className="fa fa-phone"
          />
          <p>
            202-205-6618
          </p>
        </li>
        <li>
          <i
            aria-hidden="true"
            className="fa fa-envelope"
          />
          <p>
            <a
              href="mailto:sizestandards@sba.gov"
            >
              sizestandards@sba.gov
            </a>
          </p>
        </li>
      </ul>
    </div>
    <div
      className="card"
    >
      <p>
        Find out 
        <a
          href="/contracting"
          target="_blank"
        >
          how you can sell to the Federal Government
        </a>
        .
      </p>
      <p>
        <strong>
          SBA Office of Contracting
        </strong>
      </p>
      <ul>
        <li>
          <i
            aria-hidden="true"
            className="fa fa-map-marker"
          />
          <p>
            409 3rd Street
            <span
              className="comma"
            >
              ,
            </span>
             SW 
            <br />
            Washington
            <span
              className="comma"
            >
              ,
            </span>
             DC 2041
          </p>
        </li>
        <li>
          <i
            aria-hidden="true"
            className="fa fa-phone"
          />
          <p>
            202-205-6621
          </p>
        </li>
        <li>
          <i
            aria-hidden="true"
            className="fa fa-envelope"
          />
          <p>
            <a
              href="mailto:contracting@sba.gov"
            >
              contracting@sba.gov
            </a>
          </p>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`SizeStandardsTool RevenueScreen should match snapshot 1`] = `
<div
  className="screen"
>
  <h2>
    How much revenue?
  </h2>
  <div
    className="revenueInput"
  >
    <label
      htmlFor="revenue"
    >
      Annual Revenue
    </label>
    <input
      id="revenue"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      placeholder="$"
      type="text"
      value=""
    />
  </div>
  <p>
    This caption will help a small business understand 
    <br />
    what information we're looking for.
  </p>
  <button
    autoFocus={false}
    className="LargePrimaryButton  button"
    disabled={true}
    formTarget="_self"
    id={undefined}
    onKeyPress={[Function]}
    onTouchTap={[Function]}
    tabIndex="0"
  >
    SEE RESULTS
  </button>
</div>
`;

exports[`SizeStandardsTool StartScreen should match snapshot 1`] = `
<div>
  <h2>
    Size Standards Tool
  </h2>
  <img
    src="test-file-stub"
  />
  <p>
    Do you qualify as a small business?
  </p>
  <button
    autoFocus={false}
    className="LargePrimaryButton  button"
    disabled={undefined}
    formTarget="_self"
    id={undefined}
    onKeyPress={[Function]}
    onTouchTap={[Function]}
    tabIndex="0"
  >
    Start
  </button>
</div>
`;

exports[`SizeStandardsTool should match snapshot 1`] = `
<div
  className="sizeStandardsTool"
  id="size-standards-tool"
  tabIndex="-1"
>
  <div
    className="startSection"
  >
    <div>
      <h2>
        Size Standards Tool
      </h2>
      <img
        src="test-file-stub"
      />
      <p>
        Do you qualify as a small business?
      </p>
      <button
        autoFocus={false}
        className="LargePrimaryButton  button"
        disabled={undefined}
        formTarget="_self"
        id={undefined}
        onKeyPress={[Function]}
        onTouchTap={[Function]}
        tabIndex="0"
      >
        Start
      </button>
    </div>
  </div>
</div>
`;
